[package]
name = "test-bed"
version = "0.1.0"
authors = ["Joshua Chesser <a1748908@adelaide.edu.au>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1"
ctrlc = "3.2.2"
# indicatif = "0.16"
indicatif = { git = "https://github.com/console-rs/indicatif.git" }
minijinja = { version = "0.23.0", features=["source"] } 
indexmap = "1.9"
memchr = "2.5.0"